# cmake_minimum_required(VERSION <specify CMake version here>)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp
        lt001356/Solution.h
        lt000122/Solution.h
        lt000973/Solution.h
        lt000008/Solution.h
        lt000031/Solution.h
        lt001122/Solution.h
        lt000402/Solution.h
        lt001030/Solution.h
        lt000134/Solution.h
        lt000283/Solution.h
        lt000147/Solution.h
        lt000148/Solution.h
        lt000242/Solution.h
        lt000452/Solution.h
        lt000222/Solution.h
        lt001370/Solution.h
        lt000164/Solution.h
        lt000454/Solution.h
        lt000493/Solution.h
        lt000976/Solution.h
        lt000860/Solution.h
        lt000830/Solution.h
        lt000073/Solution.h
        lt000121/Solution.h
        lt000193/Solution.h
        lt000343/Solution.h
        lt000303/Solution.h
        lt000456/Solution.h
        lt000082/Solution.h
        lt000063/Solution.h
        lt000083/Solution.h
        lt000093/Solution.h
        lt000061/Solution.h
        lt000095/Solution.h
        lt000173/Solution.h
        lt000096/Solution.h)