# cmake_minimum_required(VERSION <specify CMake version here>)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp
        lt001356/Solution.h
        lt000122/Solution.h
        lt000973/Solution.h
        lt000008/Solution.h
        lt000031/Solution.h
        lt001122/Solution.h
        lt000402/Solution.h
        lt001030/Solution.h
        lt000134/Solution.h
        lt000283/Solution.h
        lt000147/Solution.h
        lt000148/Solution.h
        lt000242/Solution.h
        lt000452/Solution.h
        lt000222/Solution.h
        lt001370/Solution.h
        lt000164/Solution.h
        lt000454/Solution.h
        lt000493/Solution.h
        lt000976/Solution.h
        lt000860/Solution.h
        lt000830/Solution.h
        lt000073/Solution.h
        lt000121/Solution.h
        lt000193/Solution.h
        lt000343/Solution.h
        lt000303/Solution.h
        lt000456/Solution.h
        lt000082/Solution.h
        lt000063/Solution.h
        lt000083/Solution.h
        lt000091/Solution.h
        lt000061/Solution.h
        lt000095/Solution.h
        lt000173/Solution.h
        lt000096/Solution.h
        lt000190/Solution.h
        lt000074/Solution.h
        lt000090/Solution.h
        lt000078/Solution.h
        lt001006/Solution.h
        interview1721/Solution.h
        lt001143/Solution.h
        lt005706/Solution.h
        lt000781/Solution.h
        lt000088/Solution.h
        lt000080/Solution.h
        lt000081/Solution.h
        lt000033/Solution.h
        lt000153/Solution.h
        lt000154/Solution.h
        lt000263/Solution.h
        lt005727/Solution.h
        lt000264/Solution.h
        lt000179/Solution.h
        lt000783/Solution.h
        offer003/Solution.h
        offer004/Solution.h
        offer005/Solution.h
        offer006/Solution.h
        offer007/Solution.h
        lt000208/Solution.h
        offer009/Solution.h
        lt000213/Solution.h
        lt000198/Solution.h
        offer010/Solution.h
        offer011/Solution.h
        lt000220/Solution.h
        lt005717/Solution.h
        lt001828/Solution.h
        lt005719/Solution.h
        lt000026/Solution.h
        lt005734/Solution.h
        lt005735/Solution.h
        lt005736/Solution.h
        lt005737/Solution.h
        offer012/Solution.h
        offer013/Solution.h
        lt000028/Solution.h
        offer014/Solution.h
        offer015/Solution.h
        lt000191/Solution.h
        offer017/Solution.h
        offer018/Solution.h
        offer021/Solution.h
        lt005740/Solution.h
        lt000897/Solution.h
        lt001011/Solution.h
        lt000938/Solution.h
        lt000257/Solution.h
        lt000633/Solution.h
        lt000137/Solution.h)