# cmake_minimum_required(VERSION <specify CMake version here>)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp
        lc0014/lt001356/Solution.h
        lc0002/lt000122/Solution.h
        lc0010/lt000973/Solution.h
        lc0001/lt000008/Solution.h
        lc0001/lt000031/Solution.h
        lc0012/lt001122/Solution.h
        lc0005/lt000402/Solution.h
        lc0011/lt001030/Solution.h
        lc0002/lt000134/Solution.h
        lc0003/lt000283/Solution.h
        lc0002/lt000147/Solution.h
        lc0002/lt000148/Solution.h
        lc0003/lt000242/Solution.h
        lc0005/lt000452/Solution.h
        lc0003/lt000222/Solution.h
        lc0014/lt001370/Solution.h
        lc0002/lt000164/Solution.h
        lc0005/lt000454/Solution.h
        lc0005/lt000493/Solution.h
        lc0010/lt000976/Solution.h
        lc0009/lt000860/Solution.h
        lc0009/lt000830/Solution.h
        lc0001/lt000073/Solution.h
        lc0002/lt000121/Solution.h
        lc0002/lt000193/Solution.h
        lc0004/lt000343/Solution.h
        lc0004/lt000303/Solution.h
        lc0005/lt000456/Solution.h
        lc0001/lt000082/Solution.h
        lc0001/lt000063/Solution.h
        lc0001/lt000083/Solution.h
        lc0001/lt000091/Solution.h
        lc0001/lt000061/Solution.h
        lc0001/lt000095/Solution.h
        lc0002/lt000173/Solution.h
        lc0001/lt000096/Solution.h
        lc0002/lt000190/Solution.h
        lc0001/lt000074/Solution.h
        lc0001/lt000090/Solution.h
        lc0001/lt000078/Solution.h
        lc0011/lt001006/Solution.h
        interview1721/Solution.h
        lc0012/lt001143/Solution.h
        lc0019/lt001813/Solution.h
        lc0008/lt000781/Solution.h
        lc0001/lt000088/Solution.h
        lc0001/lt000080/Solution.h
        lc0001/lt000081/Solution.h
        lc0001/lt000033/Solution.h
        lc0002/lt000153/Solution.h
        lc0002/lt000154/Solution.h
        lc0003/lt000263/Solution.h
        lc0019/lt001823/Solution.h
        lc0003/lt000264/Solution.h
        lc0002/lt000179/Solution.h
        lc0008/lt000783/Solution.h
        offer/offer003/Solution.h
        offer/offer004/Solution.h
        offer/offer005/Solution.h
        offer/offer006/Solution.h
        offer/offer007/Solution.h
        lc0003/lt000208/Solution.h
        offer/offer009/Solution.h
        lc0003/lt000213/Solution.h
        lc0002/lt000198/Solution.h
        offer/offer010/Solution.h
        offer/offer011/Solution.h
        lc0003/lt000220/Solution.h
        lc0019/lt001827/Solution.h
        lc0019/lt001828/Solution.h
        lc0019/lt001829/Solution.h
        lc0001/lt000026/Solution.h
        lc0019/lt001832/Solution.h
        lc0019/lt001833/Solution.h
        lc0019/lt001834/Solution.h
        lc0019/lt001835/Solution.h
        offer/offer012/Solution.h
        offer/offer013/Solution.h
        lc0001/lt000028/Solution.h
        offer/offer014/Solution.h
        offer/offer015/Solution.h
        lc0002/lt000191/Solution.h
        offer/offer017/Solution.h
        offer/offer018/Solution.h
        offer/offer021/Solution.h
        lc0019/lt001839/Solution.h
        lc0009/lt000897/Solution.h
        lc0011/lt001011/Solution.h
        lc0010/lt000938/Solution.h
        lc0003/lt000257/Solution.h
        lc0007/lt000633/Solution.h
        lc0002/lt000137/Solution.h
        lc0007/lt000690/Solution.h
        lc0002/lt000101/Solution.h
        lc0002/lt000108/Solution.h
        lc0006/lt000554/Solution.h
        lc0001/lt000007/Solution.h
        lc0009/lt000872/Solution.h
        lc0010/lt000993/Solution.h
        lc0001/lt000094/Solution.h
        lc0002/lt000110/Solution.h
        lc0002/lt000111/Solution.h
        lc0007/lt000692/Solution.h
        lc0002/lt000112/Solution.h
        lc0002/lt000113/Solution.h
        lc0002/lt000118/Solution.h
        lc0002/lt000119/Solution.h
        lc0019/lt001871/Solution.h
        lc0019/lt001870/Solution.h)